--- a/src/Tests/NServiceBus.Recoverability.RetrySucessNotification.ComponentTests.csproj
+++ b/src/Tests/NServiceBus.Recoverability.RetrySucessNotification.ComponentTests.csproj
@@ -9,8 +9,10 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ApprovalTests" Version="3.*" />
     <PackageReference Include="NServiceBus" Version="5.2.23" />
     <PackageReference Include="NUnit" Version="3.8.1" />
+    <PackageReference Include="PublicApiGenerator" Version="6.1.0-*" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RetrySuccessNotification\NServiceBus.Recoverability.RetrySucessNotification.csproj" />
