--- a/src/Tests/NServiceBus.Recoverability.RetrySucessNotification.ComponentTests.csproj
+++ b/src/Tests/NServiceBus.Recoverability.RetrySucessNotification.ComponentTests.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <PackageReference Include="ApprovalTests" Version="3.*" />
     <PackageReference Include="NServiceBus" Version="5.2.23" />
-    <PackageReference Include="NUnit" Version="3.8.1" />
+    <PackageReference Include="NUnit" Version="3.*" />
     <PackageReference Include="PublicApiGenerator" Version="6.1.0-*" />
   </ItemGroup>
   <ItemGroup>
