--- a/src/RetrySuccessNotification/NServiceBus.Recoverability.RetrySucessNotification.csproj
+++ b/src/RetrySuccessNotification/NServiceBus.Recoverability.RetrySucessNotification.csproj
@@ -21,6 +21,7 @@
   </PropertyGroup>
   <ItemGroup>
       <None Include="..\..\GitVersion.yml" Link="GitVersion.yml" />
+      <None Include="..\Directory.Build.targets" Link="Directory.Build.targets" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NServiceBus" Version="[5.0.0,6.0.0)" />
