--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Authors>Bob Langley</Authors>
-    <Company>Simution, Inc.</Company>
+    <Owners>Simution, Inc.</Owners>
     <PackageLicenseUrl>https://raw.githubusercontent.com/Simution/NServiceBus.Recoverability.RetrySuccessNotification/develop/LICENSE</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2010-$([System.DateTime]::UtcNow.ToString(yyyy)) Simution. All rights reserved</Copyright>
