--- a/src/AcceptanceTests/NServiceBus.Recoverability.RetrySucessNotification.AcceptanceTests.csproj
+++ b/src/AcceptanceTests/NServiceBus.Recoverability.RetrySucessNotification.AcceptanceTests.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net462</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NServiceBus" Version="6.*" />
-    <PackageReference Include="NServiceBus.AcceptanceTesting" Version="6.*" />
+    <PackageReference Include="NServiceBus" Version="7.0.0-*" />
+    <PackageReference Include="NServiceBus.AcceptanceTesting" Version="7.0.0-*" />
     <PackageReference Include="NUnit" Version="3.*" />
   </ItemGroup>
   <ItemGroup>
