--- a/src/Tests/NServiceBus.Recoverability.RetrySucessNotification.ComponentTests.csproj
+++ b/src/Tests/NServiceBus.Recoverability.RetrySucessNotification.ComponentTests.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ApprovalTests" Version="3.*" />
-    <PackageReference Include="NServiceBus" Version="6.*" />
+    <PackageReference Include="NServiceBus" Version="7.0.0-*" />
     <PackageReference Include="NUnit" Version="3.*" />
     <PackageReference Include="PublicApiGenerator" Version="6.1.0-*" />
   </ItemGroup>
